fixed overflow-x problem

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,7 @@ body {
   color: var(--light);
   font-family: 'Roboto', sans-serif;
   background-color: var(--background);
+  overflow-x: hidden;
 }
 
 #root {
